force-app/main/default/objects/SA_Restricted_Word_Audit__c/SA_Restricted_Word_Audit__c.object-meta.xml
<CustomObject>
    <label>SA Restricted Word Audit</label>
    <nameField>
        <displayFormat>RWA-{0000}</displayFormat>
        <label>SA Restricted Word Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SA Restricted Word Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>