force-app/main/default/objects/SA_Restricted_Word_Audit__c/fields/Breached_By__c.field-meta.xml
<CustomField>
    <fullName>Breached_By__c</fullName>
    <label>Breached By</label>
    <type>TextArea</type>
</CustomField>