force-app/main/default/objects/SA_Restricted_Word_Audit__c/fields/Designation_Type__c.field-meta.xml
<CustomField>
    <fullName>Designation_Type__c</fullName>
    <label>Designation Type</label>
    <type>TextArea</type>
</CustomField>