force-app/main/default/objects/SA_Restricted_Word_Audit__c/fields/Masked_Text__c.field-meta.xml
<CustomField>
    <fullName>Masked_Text__c</fullName>
    <label>Masked Text</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>