force-app/main/default/objects/SA_Restricted_Word_Audit__c/fields/Matching_Restricted_Word__c.field-meta.xml
<CustomField>
    <fullName>Matching_Restricted_Word__c</fullName>
    <label>Matching Restricted Word</label>
    <type>TextArea</type>
</CustomField>