force-app/main/default/objects/SA_Restricted_Word_Audit__c/fields/Unmasked_Text__c.field-meta.xml
<CustomField>
    <fullName>Unmasked_Text__c</fullName>
    <label>Unmasked Text</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>