force-app/main/default/objects/SA_Restricted_Word_Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Breached_By__c</columns>
    <columns>Designation_Type__c</columns>
    <columns>Matching_Restricted_Word__c</columns>
    <columns>Masked_Text__c</columns>
    <columns>Unmasked_Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>